--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,8 +2,7 @@
 $icons-spacing: 30px;
 $icons-layout: smart;   
 @import "icons/*.png";
- 
-/* h1 {
-	@include icons-sprite(ico-heart);
+ h1 {
+	color: green;
 }
- */
+
