--- a/css/main.css
+++ b/css/main.css
@@ -1,8 +1,50 @@
-.icons-sprite {
-  background-image: url('../img/icons-sfd25b43804.png');
+.icons-sprite, .phone .mail:before, .phone .number:before {
+  background-image: url('../img/icons-s7740070f82.png');
   background-repeat: no-repeat;
 }
 
-h1 {
-  color: green;
+.wrapper {
+  min-width: 1920px;
+  font-family: arial, sans-serif;
+}
+
+.header {
+  height: 153px;
+}
+
+.contacts {
+  height: 41px;
+  background-color: #f5f7fa;
+}
+
+.phone {
+  float: left;
+}
+
+.phone li {
+  list-style: none;
+  display: inline-block;
+  margin-left: 30px;
+}
+
+a {
+  text-decoration: none;
+  color: #506a85;
+  font-size: 12px;
+}
+
+.phone .mail:before {
+  content: '';
+  display: block;
+  width: 11px;
+  height: 9px;
+  background-position: -13px -13px;
+}
+
+.phone .number:before {
+  content: '';
+  display: block;
+  width: 7px;
+  height: 13px;
+  background-position: -35px 0;
 }
