--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-.icons-sprite, .phone .mail:before, .phone .number:before {
+.icons-sprite, .phone .mail:before, .phone .number:before, .icons .facebook, .icons .gplus, .icons .twitter, .icons .pinterest, .icons .behance, .icons .dribbble {
   background-image: url('../img/icons-s7740070f82.png');
   background-repeat: no-repeat;
 }
@@ -19,12 +19,14 @@
 
 .phone {
   float: left;
+  margin: 0 auto;
 }
 
 .phone li {
   list-style: none;
   display: inline-block;
   margin-left: 30px;
+  position: relative;
 }
 
 a {
@@ -39,6 +41,9 @@ a {
   width: 11px;
   height: 9px;
   background-position: -13px -13px;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 
 .phone .number:before {
@@ -47,4 +52,54 @@ a {
   width: 7px;
   height: 13px;
   background-position: -35px 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.icons {
+  float: right;
+  margin: 0 auto;
+}
+
+.icons li {
+  list-style: none;
+  margin-left: 10px;
+  display: inline-block;
+}
+
+.icons .facebook {
+  background-position: -9px 0;
+  width: 7px;
+  height: 11px;
+}
+
+.icons .gplus {
+  background-position: -47px -13px;
+  width: 11px;
+  height: 11px;
+}
+
+.icons .twitter {
+  background-position: -24px -13px;
+  width: 9px;
+  height: 11px;
+}
+
+.icons .pinterest {
+  background-position: 0 0;
+  width: 9px;
+  height: 11px;
+}
+
+.icons .behance {
+  background-position: 0 -13px;
+  width: 13px;
+  height: 8px;
+}
+
+.icons .dribbble {
+  background-position: -35px -13px;
+  width: 12px;
+  height: 11px;
 }
