start make header contacts3

--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,7 @@
 
 .header {
   height: 153px;
+  margin: 0;
 }
 
 .contacts {
@@ -42,8 +43,8 @@ a {
   height: 9px;
   background-position: -13px -13px;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 5px;
+  left: -20px;
 }
 
 .phone .number:before {
@@ -53,8 +54,8 @@ a {
   height: 13px;
   background-position: -35px 0;
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 2px;
+  left: -15px;
 }
 
 .icons {
@@ -102,4 +103,22 @@ a {
   background-position: -35px -13px;
   width: 12px;
   height: 11px;
+}
+
+.menu {
+  float: right;
+  margin: auto;
+}
+
+.menu li {
+  display: inline-block;
+  list-style: none;
+  margin-left: 45px;
+}
+
+.menu a {
+  font-size: 15px;
+  color: #506a85;
+  font-weight: bold;
+  text-transform: uppercase;
 }
