--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,7 +19,7 @@ $icons-layout: smart;
 }
 .phone{
   float: left;
-  margin: 0 auto;
+  margin: 0 0 0 375px;
 }
 .phone li {
   list-style: none;
@@ -58,7 +58,7 @@ a{
 
 .icons{
   float: right;
-  margin: 0 auto;
+  margin: 0 385px 20px 0;
 }
 .icons li{
   list-style: none;
@@ -98,12 +98,12 @@ a{
 }
 .menu{
   float: right;
-  margin: auto;
+  margin: 40px 635px 50px 625px;
 }
 .menu li{
   display: inline-block;
   list-style: none;
-  margin-left: 45px;
+  margin-left: 15px;
 }
 .menu a{
   font-size: 15px;
