--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,6 +12,10 @@ $icons-layout: smart;
   height: 153px;
   margin: 0;
 }
+.contacts-inner{
+  width:80%;
+  margin: auto;
+}
 .contacts{
   height: 41px;
   background-color: #f5f7fa;
@@ -19,7 +23,6 @@ $icons-layout: smart;
 }
 .phone{
   float: left;
-  margin: 0 0 0 375px;
 }
 .phone li {
   list-style: none;
@@ -58,11 +61,10 @@ a{
 
 .icons{
   float: right;
-  margin: 0 385px 20px 0;
 }
 .icons li{
   list-style: none;
-  margin-left:10px ;
+  margin-right:30px ;
   display: inline-block;
 }
 .icons .facebook{
@@ -96,9 +98,19 @@ a{
   width: 12px;
   height: 11px;
 }
+.header-img{
+  float: left
+
+}
+.menu-inner{
+  width: 80%;
+  margin: auto;
+}
+
 .menu{
-  float: right;
-  margin: 40px 635px 50px 625px;
+  float: left;
+
+
 }
 .menu li{
   display: inline-block;
