--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,28 +1,29 @@
 @import 'compass';
+@import "compass/reset";
 $icons-spacing: 30px;
 $icons-layout: smart;   
 @import "icons/*.png";
 
 
-.wrapper{
-  min-width: 1920px;
+.wrapper {
+  max-width: 1920px;
   font-family: arial, sans-serif;
 }
-.header{
+.header {
   height: 153px;
   margin: 0;
 }
-.contacts-inner{
+.contacts-inner {
   height: 41px;
   background-color: #f5f7fa;
 
 }
-.contacts{
+.contacts {
   width:80%;
   margin: auto;
 
 }
-.phone{
+.phone {
   float: left;
 }
 .phone li {
@@ -99,10 +100,10 @@ a{
   width: 12px;
   height: 11px;
 }
-.header-img{
+.header-logo{
   float: left;
-  margin-top: 35px;
-  margin-left: -230px;
+  margin-top: 40px;
+  margin-left: 10px;
 }
 .menu-inner{
   width: 80%;
@@ -112,12 +113,14 @@ a{
 .menu{
   float: left;
   margin-top: 55px;
-
+  position: relative;
+  margin-left: 90px;
 }
 .menu li{
   display: inline-block;
   list-style: none;
-  margin-left: 15px;
+  margin-left: 45px;
+  position: relative;
 }
 .menu a{
   font-size: 15px;
@@ -125,6 +128,29 @@ a{
   font-weight: bold;
   text-transform: uppercase;
 }
+.menu .submenu{
+  display: none;
+  position: absolute;
+  width: 133px;
+  height: 100px;
+  top: 17px;
+  left: -24px;
+  padding:0;
+  margin: 0;
+}
+
+.menu .submenu > li > a{
+  display: block;
+  padding: 5px 10px;
+}
+.menu>li:hover .submenu{
+  display: block;
+}
+
+.submenu:hover{
+  display: block;
+}
+
 .clear {
   &:after {
     content: '';
@@ -145,7 +171,12 @@ a{
   @include icons-sprite(ico-search);
   position: absolute;
   top: 4px;
-  right: 7px;
+  right: 1px;
 }
-
+.header-find .submit{
+  opacity: 0;
+  width: 15px;
+  height: 15px;
+  cursor: pointer;
+}
 
