--- a/css/main.css
+++ b/css/main.css
@@ -77,6 +77,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
 .contacts {
   width: 80%;
   margin: auto;
+  padding-top: 10px;
 }
 
 .phone {
@@ -168,6 +169,8 @@ a {
   float: left;
   margin-top: 40px;
   margin-left: 10px;
+  width: 150px;
+  height: 40px;
 }
 
 .menu-inner {
@@ -179,7 +182,7 @@ a {
   float: left;
   margin-top: 55px;
   position: relative;
-  margin-left: 90px;
+  margin-left: 7%;
 }
 
 .menu li {
@@ -199,17 +202,25 @@ a {
 .menu .submenu {
   display: none;
   position: absolute;
-  width: 133px;
-  height: 100px;
+  width: 155px;
+  height: 130px;
   top: 17px;
-  left: -24px;
+  left: -50px;
   padding: 0;
   margin: 0;
+  background-color: #cacaca;
+  border: 2px solid #506a85;
 }
 
-.menu .submenu > li > a {
+.menu .submenu li a {
   display: block;
-  padding: 5px 10px;
+  padding: 8px 0;
+  color: #0088CC;
+  text-decoration: none;
+}
+
+.menu .submenu li a:hover {
+  color: white;
 }
 
 .menu > li:hover .submenu {
