--- a/scss/main.scss
+++ b/scss/main.scss
@@ -104,6 +104,8 @@ a{
   float: left;
   margin-top: 40px;
   margin-left: 10px;
+  width: 150px;
+  height: 40px;
 }
 .menu-inner{
   width: 80%;
@@ -114,7 +116,7 @@ a{
   float: left;
   margin-top: 55px;
   position: relative;
-  margin-left: 90px;
+  margin-left: 7%;
 }
 .menu li{
   display: inline-block;
@@ -131,18 +133,26 @@ a{
 .menu .submenu{
   display: none;
   position: absolute;
-  width: 133px;
-  height: 100px;
+  width: 155px;
+  height: 130px;
   top: 17px;
-  left: -24px;
+  left: -50px;
   padding:0;
   margin: 0;
+  background-color: #cacaca;
+  border: 2px solid #506a85;
 }
 
-.menu .submenu > li > a{
+.menu .submenu  li  a{
   display: block;
-  padding: 5px 10px;
+  padding:8px 0;
+  color:#0088CC;
+  text-decoration:none;
 }
+.menu .submenu  li a:hover{
+  color: white;
+}
+
 .menu>li:hover .submenu{
   display: block;
 }
