--- a/css/main.css
+++ b/css/main.css
@@ -259,4 +259,10 @@ a {
   width: 15px;
   height: 15px;
   cursor: pointer;
+  position: relative;
+  z-index: 2;
+}
+
+.header-find:after {
+  z-index: 0;
 }
