--- a/scss/main.scss
+++ b/scss/main.scss
@@ -188,5 +188,11 @@ a{
   width: 15px;
   height: 15px;
   cursor: pointer;
+  position: relative;
+  z-index: 2;
+}
+
+.header-find:after {
+  z-index: 0
 }
 
