--- a/css/main.css
+++ b/css/main.css
@@ -266,3 +266,49 @@ a {
 .header-find:after {
   z-index: 0;
 }
+
+.main-content {
+  height: 882px;
+  margin-top: 35px;
+  background: url("/img/img-content.jpg") no-repeat 0 0;
+  position: relative;
+}
+
+.content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.content h1 {
+  color: white;
+  font-size: 78px;
+  text-transform: uppercase;
+}
+
+.content p {
+  color: #a3b1bf;
+  font-size: 24px;
+  line-height: 1.5;
+  margin-top: 40px;
+}
+
+.content .button {
+  display: inline-block;
+  color: white;
+  font-size: 18px;
+  text-transform: uppercase;
+  margin-top: 70px;
+  border-radius: 2px;
+  border: 1px solid #00bc9c;
+  background-color: #00bc9c;
+  padding: 25px 70px;
+}
+
+.content .button:hover {
+  background-color: #027864;
+  color: white;
+  border: 1px solid #027864;
+}
