--- a/scss/main.scss
+++ b/scss/main.scss
@@ -25,14 +25,15 @@ $icons-layout: smart;
 }
 .phone {
   float: left;
+
+  li {
+    list-style: none;
+    display: inline-block;
+    margin-left: 30px;
+    position: relative;
+  }
 }
-.phone li {
-  list-style: none;
-  display: inline-block;
-  margin-left: 30px;
-  position: relative;
-}
-a{
+a {
   text-decoration: none;
   color: #506a85;
   font-size: 12px;
@@ -50,7 +51,7 @@ a{
 
 
   }
-.phone .number:before{
+.phone .number:before {
   content: '';
   display: block;
   width: 7px;
@@ -61,103 +62,105 @@ a{
   left: -15px;
 }
 
-.icons{
+.icons {
   float: right;
-}
-.icons li{
-  list-style: none;
-  margin-right:30px ;
-  display: inline-block;
-}
-.icons .facebook{
-  @include icons-sprite(ico-facebook);
-  width: 7px;
-  height: 11px;
-}
-.icons .gplus{
-   @include icons-sprite(ico-gplus);
-   width: 11px;
-   height: 11px;
- }
-.icons .twitter{
-  @include icons-sprite(icon-twitter);
-  width: 9px;
-  height: 11px;
-}
-.icons .pinterest{
-  @include icons-sprite(ico-pinterest);
-  width: 9px;
-  height: 11px;
-}
 
-.icons .behance{
-  @include icons-sprite(ico-behance);
-  width: 13px;
-  height: 8px;
+  li {
+    list-style: none;
+    margin-right: 30px;
+    display: inline-block;
+  }
+  .facebook {
+    @include icons-sprite(ico-facebook);
+    width: 7px;
+    height: 11px;
+  }
+  .gplus {
+    @include icons-sprite(ico-gplus);
+    width: 11px;
+    height: 11px;
+  }
+  .twitter {
+    @include icons-sprite(icon-twitter);
+    width: 9px;
+    height: 11px;
+  }
+  .pinterest {
+    @include icons-sprite(ico-pinterest);
+    width: 9px;
+    height: 11px;
+  }
+
+  .behance {
+    @include icons-sprite(ico-behance);
+    width: 13px;
+    height: 8px;
+  }
+  .dribbble {
+    @include icons-sprite(ico-dribbble);
+    width: 12px;
+    height: 11px;
+  }
 }
-.icons .dribbble{
-  @include icons-sprite(ico-dribbble);
-  width: 12px;
-  height: 11px;
-}
-.header-logo{
+  .header-logo {
   float: left;
   margin-top: 40px;
   margin-left: 10px;
   width: 150px;
   height: 40px;
 }
-.menu-inner{
+.menu-inner {
   width: 80%;
   margin: auto;
 }
 
-.menu{
+.menu {
   float: left;
   margin-top: 55px;
   position: relative;
   margin-left: 7%;
-}
-.menu li{
-  display: inline-block;
-  list-style: none;
-  margin-left: 45px;
-  position: relative;
-}
-.menu a{
-  font-size: 15px;
-  color: #506a85;
-  font-weight: bold;
-  text-transform: uppercase;
-}
-.menu .submenu{
-  display: none;
-  position: absolute;
-  width: 155px;
-  height: 130px;
-  top: 17px;
-  left: -50px;
-  padding:0;
-  margin: 0;
-  background-color: #cacaca;
-  border: 2px solid #506a85;
+
+  li {
+    display: inline-block;
+    list-style: none;
+    margin-left: 45px;
+    position: relative;
+  }
+  a {
+    font-size: 15px;
+    color: #506a85;
+    font-weight: bold;
+    text-transform: uppercase;
+  }
+  .submenu {
+    display: none;
+    position: absolute;
+    width: 155px;
+    height: 130px;
+    top: 17px;
+    left: -50px;
+    padding: 0;
+    margin: 0;
+    background-color: #cacaca;
+    border: 2px solid #506a85;
+
+    li a {
+      display: block;
+      padding: 8px 0;
+      color: #0088CC;
+      text-decoration: none;
+    }
+    li a:hover {
+      color: white;
+    }
+  }
 }
 
-.menu .submenu  li  a{
+.menu>li:hover .submenu {
   display: block;
-  padding:8px 0;
-  color:#0088CC;
-  text-decoration:none;
-}
-.menu .submenu  li a:hover{
-  color: white;
 }
 
-.menu>li:hover .submenu{
-  display: block;
-}
-
-.submenu:hover{
+.submenu:hover {
   display: block;
 }
 
@@ -168,75 +171,76 @@ a{
     clear: both;
   }
 }
-.header-find{
+.header-find {
   float: right;
   position: relative;
   margin-top: 55px;
-}
-.header-find:after{
-  content: '';
-  display: block;
-  width: 12px;
-  height: 12px;
-  @include icons-sprite(ico-search);
-  position: absolute;
-  top: 4px;
-  right: 1px;
-}
-.header-find .submit{
-  opacity: 0;
-  width: 15px;
-  height: 15px;
-  cursor: pointer;
-  position: relative;
-  z-index: 2;
+
+  .header-find:after {
+    content: '';
+    display: block;
+    width: 12px;
+    height: 12px;
+    @include icons-sprite(ico-search);
+    position: absolute;
+    top: 4px;
+    right: 1px;
+  }
+  .submit {
+    opacity: 0;
+    width: 15px;
+    height: 15px;
+    cursor: pointer;
+    position: relative;
+    z-index: 2;
+  }
 }
 
 .header-find:after {
   z-index: 0
 }
 
-.main-content{
+.main-content {
   height: 882px;
   margin-top: 35px;
   background: url("/img/img-content.jpg") no-repeat 0 0;
   position: relative;
-}
-.content{
 
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
+  .content {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
 
-.content h1{
-  color: white;
-  font-size: 78px;
-  text-transform: uppercase;
-}
-.content p{
-  color: #a3b1bf;
-  font-size: 24px;
-  line-height: 1.5;
-  margin-top: 40px;
-}
+    h1 {
+      color: white;
+      font-size: 78px;
+      text-transform: uppercase;
+    }
+    p {
+      color: #a3b1bf;
+      font-size: 24px;
+      line-height: 1.5;
+      margin-top: 40px;
+    }
 
-.content .button{
-  display: inline-block;
-  color: white;
-  font-size: 18px;
-  text-transform: uppercase;
-  margin-top: 70px;
-  border-radius: 2px;
-  border: 1px solid #00bc9c;
-  background-color:#00bc9c ;
-  padding: 25px 70px;
-}
+    .button {
+      display: inline-block;
+      color: white;
+      font-size: 18px;
+      text-transform: uppercase;
+      margin-top: 70px;
+      border-radius: 2px;
+      border: 1px solid #00bc9c;
+      background-color: #00bc9c;
+      padding: 25px 70px;
+    }
 
-.content .button:hover{
-  background-color: #027864;
-  color:white;
-  border: 1px solid #027864;
+    .button:hover {
+      background-color: #027864;
+      color: white;
+      border: 1px solid #027864;
+    }
+  }
 }
