--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,28 +1,31 @@
 @import 'compass';
 @import "compass/reset";
-$icons-spacing: 30px;
-$icons-layout: smart;   
-@import "icons/*.png";
 
+$icons-spacing: 30px;
+$icons-layout: smart;
+@import "icons/*.png";
 
 .wrapper {
   max-width: 1920px;
   font-family: arial, sans-serif;
 }
+
 .header {
   height: 153px;
   margin: 0;
 }
-.contacts-inner {
-  height: 41px;
-  background-color: #f5f7fa;
 
-}
 .contacts {
-  width:80%;
+  width: 80%;
   margin: auto;
   padding-top: 10px;
+  &-inner {
+    height: 41px;
+    background-color: #f5f7fa;
+
+  }
 }
+
 .phone {
   float: left;
 
@@ -32,38 +35,44 @@ $icons-layout: smart;
     margin-left: 30px;
     position: relative;
   }
+
+  .mail {
+    &:before {
+      content: '';
+      display: block;
+      width: 11px;
+      height: 9px;
+      @include icons-sprite(ico-mail);
+      position: absolute;
+      top: 5px;
+      left: -20px;
+    }
+  }
+
+  .number {
+    &:before {
+      content: '';
+      display: block;
+      width: 7px;
+      height: 13px;
+      @include icons-sprite(ico-mobile);
+      position: absolute;
+      top: 2px;
+      left: -15px;
+    }
+  }
+
 }
+
 a {
   text-decoration: none;
   color: #506a85;
   font-size: 12px;
 }
 
-.phone .mail:before {
-    content: '';
-    display: block;
-    width: 11px;
-    height: 9px;
-    @include icons-sprite(ico-mail);
-    position: absolute;
-    top: 5px;
-    left: -20px;
-
-
-  }
-.phone .number:before {
-  content: '';
-  display: block;
-  width: 7px;
-  height: 13px;
-  @include icons-sprite(ico-mobile);
-  position: absolute;
-  top: 2px;
-  left: -15px;
-}
-
 .icons {
   float: right;
+  cursor: pointer;
 
   li {
     list-style: none;
@@ -102,13 +111,15 @@ a {
     height: 11px;
   }
 }
-  .header-logo {
+
+.header-logo {
   float: left;
   margin-top: 40px;
   margin-left: 10px;
   width: 150px;
   height: 40px;
 }
+
 .menu-inner {
   width: 80%;
   margin: auto;
@@ -125,6 +136,14 @@ a {
     list-style: none;
     margin-left: 45px;
     position: relative;
+  }
+
+   & > li {
+    &:hover {
+      .submenu {
+        display: block;
+      }
+    }
   }
   a {
     font-size: 15px;
@@ -143,25 +162,19 @@ a {
     margin: 0;
     background-color: #cacaca;
     border: 2px solid #506a85;
-
-    li a {
-      display: block;
-      padding: 8px 0;
-      color: #0088CC;
-      text-decoration: none;
-    }
-    li a:hover {
-      color: white;
+    z-index: 2;
+    li {
+      a {
+        display: block;
+        padding: 8px 0;
+        color: #0088CC;
+        text-decoration: none;
+        &:hover {
+          color: white;
+        }
+      }
     }
   }
-}
-
-.menu>li:hover .submenu {
-  display: block;
-}
-
-.submenu:hover {
-  display: block;
 }
 
 .clear {
@@ -171,6 +184,7 @@ a {
     clear: both;
   }
 }
+
 .header-find {
   float: right;
   position: relative;
@@ -185,19 +199,19 @@ a {
     z-index: 2;
   }
 }
-.header-find:after {
-  content: '';
-  display: block;
-  width: 12px;
-  height: 12px;
-  @include icons-sprite(ico-search);
-  position: absolute;
-  top: 4px;
-  right: 1px;
-}
 
-.header-find:after {
-  z-index: 0
+.header-find {
+  &:after {
+    content: '';
+    display: block;
+    width: 12px;
+    height: 12px;
+    @include icons-sprite(ico-search);
+    position: absolute;
+    top: 4px;
+    right: 1px;
+    z-index: 0;
+  }
 }
 
 .main-content {
@@ -235,15 +249,16 @@ a {
       border: 1px solid #00bc9c;
       background-color: #00bc9c;
       padding: 25px 70px;
+      &:hover {
+        background-color: #027864;
+        color: white;
+        border: 1px solid #027864;
+      }
     }
 
-    .button:hover {
-      background-color: #027864;
-      color: white;
-      border: 1px solid #027864;
-    }
   }
 }
+
 .content-info {
   height: 673px;
 
@@ -271,7 +286,7 @@ a {
 
     .content {
       &-passion, &-creativity, &-quality {
-        width: 20%;
+        width: 26%;
         margin-left: 130px;
         display: inline-block;
         margin-top: 80px;
@@ -289,9 +304,7 @@ a {
         }
       }
     }
-    .content-passion{
-      margin-left: 0;
-    }
+
     .content {
       &-passion, &-creativity, &-quality {
         position: relative;
@@ -299,33 +312,130 @@ a {
           content: '';
           position: absolute;
           display: block;
-          width: 66px;
-          height: 55px;
+          width: 70px;
+          height: 53px;
         }
       }
       &-passion {
+        margin-left: 5px;
         &:before {
-          @include icons-sprites(ico-heart);
+          @include icons-sprite(ico-heart);
           top: 0;
-          left:0;
+          left: -90px;
         }
       }
       &-creativity {
         &:before {
-          @include icons-sprites(ico-lamp);
+          @include icons-sprite(ico-lamp);
           top: 0;
-          left:0;
+          left: -75px;
+          height: 67px;
         }
       }
       &-quality {
         &:before {
-          @include icons-sprites(ico-star);
+          @include icons-sprite(ico-star);
           top: 0;
-          left:0;
+          left: -90px;
         }
       }
     }
   }
 }
+.general-info {
+  height: 1270px;
+  background-color: #f2f5f7;
+  .slogan {
+    width: 50%;
+    margin: auto;
+    text-align: center;
+    h2 {
+      color: #506a85;
+      font-size: 44px;
+      display: inline-block;
+      margin-bottom: 44px;
+      margin-top: 130px;
+    }
+    p {
+      color: #73879c;
+      font-size: 22px;
+      line-height: 2;
+      display: inline-block;
+      margin-bottom: 80px;
+    }
+  }
+  .works {
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    .frame-latest, .frame {
+      display: inline-block;
+      border: 1px solid #dfe2e3;
+      border-radius: 2px;
+      background-color: white;
+      margin-bottom: 80px;
+      .works-img, .works-img-2 {
+        margin-bottom: 35px;
+      }
+      h4 {
+        color: #506a85;
+        font-size: 20px;
+        display: inline-block;
+        margin-bottom: 20px;
+      }
+      p {
+        color: #73879c;
+        font-size: 14px;
+      }
+      .text {
+        padding-bottom: 35px;
+      }
+    }
+    .frame {
+      margin-left: 30px;
+    }
+  }
+  .slider {
+    width: 77%;
+    margin: auto;
+    .img {
+      text-align: center;
+      margin-bottom: 45px;
+      li {
+        width: 270px;
+        height: 185px;
+        display: inline-block;
+        margin-left: 30px;
+        &:first-child {
+          margin-left: 0;
+        }
+      }
+    }
+    .dots {
+      width: 10%;
+      margin: auto;
+      .control-dots {
+        border: 1px solid #506a85;
+        border-radius: 20px;
+        background-color: #506a85;
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+        margin-left: 10px;
+      }
+      .active {
+        border: 1px solid #00bc9c;
+        border-radius: 20px;
+        background-color: #00bc9c;
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+        margin-left: 10px;
+      }
+    }
+  }
+}
+
+
 
 
